@@ -1,5 +1,5 @@
 /*
- * $Id: hbsetup.h,v 1.4 2002/07/05 19:46:51 ronpinkas Exp $
+ * $Id: hbsetup.h,v 1.5 2002/09/19 01:57:42 ronpinkas Exp $
  */
 
 /*
@@ -53,7 +53,7 @@
 #ifndef HB_SETUP_H_
 #define HB_SETUP_H_
 
-#define HB_PCODE_VER 2
+#define HB_PCODE_VER 3
 
 // Don't change - this is the default for older compiled prgs.!!!
 #define HB_PRG_PCODE_VER 0
